box-shadow does not paint correctly on inline elements https://bugs.webkit.org/show_bug.cgi?id=250059 <rdar://problem/103887993>

Reviewed by Antti Koivisto.

Box shadow top and left values are relative to the content box. Shadow on the top/left side of the box produce negative values.
Calling FloatRect::inflate with negative values deflate the rect.
Also, use physical (visual) variants of the RenderStyle box-shadow functions as at this point (display box phase) all the coord are in physical (visual) space.

* LayoutTests/fast/repaint/box-shadow-top-left-repaint-expected.txt: Added.
* LayoutTests/fast/repaint/box-shadow-top-left-repaint.html: Added.
* LayoutTests/fast/repaint/full-repaint-on-content-change.html: (remove odd leftover)
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::computeInkOverflowForInlineLevelBox):

Canonical link: https://commits.webkit.org/258923@main